--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.4",
     "@mdx-js/react": "^1.6.4",
+    "date-fns": "^2.14.0",
     "gatsby": "^2.21.37",
     "gatsby-plugin-layout": "^1.3.2",
     "gatsby-plugin-mdx": "^1.2.12",
     "gatsby-plugin-react-helmet": "^3.3.2",
     "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-source-filesystem": "^2.3.8",
+    "lodash": "^4.17.15",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
-    "theme-ui": "^0.3.1"
+    "theme-ui": "^0.3.1",
+    "title": "^3.4.2"
   },
   "devDependencies": {
     "prettier": "2.0.5"
