--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lodash": "^4.17.15",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-feather": "^2.0.8",
     "react-helmet": "^6.0.0",
     "theme-ui": "^0.3.1",
     "title": "^3.4.2"
